# wx_projector

./: .gitattributes  .gitignore  .python-version.example  DESKTOP_SHORTCUT.md  DISTRIBUTION.md  ICON_SETUP.md  README.md  README_Windows.md  RELEASE_CHECKLIST.md  books.csv  config.json  create_app.sh  hymns.csv  icon.icns  install.sh  pyproject.toml  requirements.txt  requirements_windows.txt  run.sh  wx_projector.py  wx_projector_backup_20250725_125517.py  wx_projector_clean.py  wx_projector_fixed.py  wx_projector_windows.py
books/cuv/vol01/: chap001.txt  chap002.txt  chap003.txt  chap004.txt  chap005.txt  chap006.txt  chap007.txt  chap008.txt  chap009.txt  chap010.txt  chap011.txt  chap012.txt  chap013.txt  chap014.txt  chap015.txt  chap016.txt  chap017.txt  chap018.txt  chap019.txt  chap020.txt  chap021.txt  chap022.txt  chap023.txt  chap024.txt  chap025.txt  chap026.txt  chap027.txt  chap028.txt  chap029.txt  chap030.txt  chap031.txt  chap032.txt  chap033.txt  chap034.txt  chap035.txt  chap036.txt  chap037.txt  chap038.txt  chap039.txt  chap040.txt  (+10 more)
books/cuv/vol02/: chap001.txt  chap002.txt  chap003.txt  chap004.txt  chap005.txt  chap006.txt  chap007.txt  (+33 more)
projector/.specify/: data-model.md  plan.md  quickstart.md  research.md  specification.md  speckit.constitution
src/: bridge.py  bridge_simple.py  main.py
src/core/: bible_engine.py  content_renderer.py
src/data/: bible_repository.py  config_manager.py  hymn_repository.py
src/services/: google_meet_automation.py
src/ui/: main_window.py  projection_window.py
src/utils/: mock_data.py  parsers.py
(+5428 files in other folders)
