[project]
name = "webpage-projector"
version = "2.0.0"
description = "Desktop application for projecting Bible verses, hymns, and web content to a secondary display"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Bill Wei" }
]
keywords = ["presentation", "projection", "bible", "hymn", "church"]

dependencies = [
    "wxpython>=4.2.3",
    "screeninfo>=0.8.1",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
webpage-projector = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"